--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "rxjs": "~7.5.0",
+    "save-dev": "^0.0.1-security",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
